[gd_scene load_steps=9 format=3 uid="uid://7arhpg48k78s"]

[ext_resource type="Script" path="res://scenes/docks/connection_dock/connection_item/connection_item.gd" id="1_88d85"]
[ext_resource type="Texture2D" uid="uid://c254ee1bundpv" path="res://icons/lock_locked.svg" id="2_f3dms"]
[ext_resource type="Texture2D" uid="uid://cbenjl74ypdcu" path="res://icons/trash_can.svg" id="3_sydul"]
[ext_resource type="Texture2D" uid="uid://bx7vgffhytqir" path="res://icons/eye_close.svg" id="4_gialv"]
[ext_resource type="Texture2D" uid="uid://cydjwtytjue4q" path="res://icons/action_copy.svg" id="5_54bhf"]
[ext_resource type="Texture2D" uid="uid://cbf0mlr25w1l0" path="res://icons/link.svg" id="6_3y8wg"]
[ext_resource type="PackedScene" uid="uid://dd1qta6gxlsnl" path="res://scenes/python/python_onetime/python_onetime.tscn" id="7_dpiul"]
[ext_resource type="PackedScene" uid="uid://bnsv4bmd8tkjp" path="res://scenes/python/python_parser/python_parser.tscn" id="8_b18ok"]

[node name="PanelContainer" type="PanelContainer" node_paths=PackedStringArray("lock", "delete_confirmation", "name_line", "uri_line", "uri_show", "uri_test", "python_onetime", "python_parser")]
offset_right = 311.0
offset_bottom = 94.0
script = ExtResource("1_88d85")
lock = NodePath("Container/Container/Menu/Lock")
delete_confirmation = NodePath("Container/Container/Menu/Delete/DeleteConfirmation")
name_line = NodePath("Container/Container/Info/NameLine")
uri_line = NodePath("Container/Container/Info/URILine")
uri_show = NodePath("Container/Container/Info/URIShow")
uri_test = NodePath("Container/Container/Info/URITest")
python_onetime = NodePath("Container/Container/Info/URITest/PythonOnetime")
python_parser = NodePath("Container/Container/Info/URITest/PythonParser")

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Container" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Menu" type="HBoxContainer" parent="Container/Container"]
layout_mode = 2

[node name="Lock" type="Button" parent="Container/Container/Menu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
icon = ExtResource("2_f3dms")
flat = true

[node name="Delete" type="Button" parent="Container/Container/Menu"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("3_sydul")
flat = true

[node name="DeleteConfirmation" type="ConfirmationDialog" parent="Container/Container/Menu/Delete"]
dialog_text = "Remove connection? (Cannot be undone.)"

[node name="Info" type="GridContainer" parent="Container/Container"]
layout_mode = 2
columns = 6

[node name="NameLabel" type="Label" parent="Container/Container/Info"]
layout_mode = 2
text = "Name "

[node name="NameLine" type="LineEdit" parent="Container/Container/Info"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "localhost"
editable = false

[node name="Empty" type="Control" parent="Container/Container/Info"]
layout_mode = 2

[node name="Empty2" type="Control" parent="Container/Container/Info"]
layout_mode = 2

[node name="Empty3" type="Control" parent="Container/Container/Info"]
layout_mode = 2

[node name="Empty4" type="Control" parent="Container/Container/Info"]
layout_mode = 2

[node name="URILabel" type="Label" parent="Container/Container/Info"]
layout_mode = 2
text = "URI "

[node name="URILine" type="LineEdit" parent="Container/Container/Info"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
editable = false
secret = true

[node name="URIShow" type="Button" parent="Container/Container/Info"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("4_gialv")
flat = true

[node name="URICopy" type="Button" parent="Container/Container/Info"]
layout_mode = 2
icon = ExtResource("5_54bhf")
flat = true

[node name="URITest" type="Button" parent="Container/Container/Info"]
layout_mode = 2
icon = ExtResource("6_3y8wg")
flat = true

[node name="PythonOnetime" parent="Container/Container/Info/URITest" instance=ExtResource("7_dpiul")]

[node name="PythonParser" parent="Container/Container/Info/URITest" instance=ExtResource("8_b18ok")]

[connection signal="toggled" from="Container/Container/Menu/Lock" to="." method="_on_lock_toggled"]
[connection signal="pressed" from="Container/Container/Menu/Delete" to="." method="_on_delete_pressed"]
[connection signal="confirmed" from="Container/Container/Menu/Delete/DeleteConfirmation" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="text_changed" from="Container/Container/Info/NameLine" to="." method="_on_name_line_text_changed"]
[connection signal="text_changed" from="Container/Container/Info/URILine" to="." method="_on_uri_line_text_changed"]
[connection signal="toggled" from="Container/Container/Info/URIShow" to="." method="_on_uri_show_toggled"]
[connection signal="pressed" from="Container/Container/Info/URICopy" to="." method="_on_uri_copy_pressed"]
[connection signal="pressed" from="Container/Container/Info/URITest" to="." method="_on_uri_test_pressed"]
[connection signal="execution_finished" from="Container/Container/Info/URITest/PythonOnetime" to="." method="_on_python_onetime_execution_finished"]
[connection signal="parsing_finished" from="Container/Container/Info/URITest/PythonParser" to="." method="_on_python_parser_parsing_finished"]
[connection signal="python_code_failed" from="Container/Container/Info/URITest/PythonParser" to="." method="_on_python_parser_python_code_failed"]
